Fix Firefox code wrapping bug

--- a/pattern-lib/src/app/prism/prism.component.css
+++ b/pattern-lib/src/app/prism/prism.component.css
@@ -11,7 +11,7 @@ pre[class*="language-"] {
   font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
   direction: ltr;
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
   line-height: 1.5;
